Added account grouping for report composing.

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -410,6 +410,7 @@
     <Compile Include="Etl\CakeMarketing\Extracters\SubIdSummariesExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\CPCLoader.cs" />
     <Compile Include="Etl\DSP\Configuration\AmazonDspConfigurationProvider.cs" />
+    <Compile Include="Etl\DSP\Configuration\AmazonDspAccountsProvider.cs" />
     <Compile Include="Etl\DSP\Extractors\AmazonDspExtractor.cs" />
     <Compile Include="Etl\DSP\Extractors\Composer\DspReportDataComposer.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\DspReportCsvParser.cs" />
@@ -418,13 +419,14 @@
     <Compile Include="Etl\DSP\Extractors\Parser\ParsingConverters\DecimalReportConverter.cs" />
     <Compile Include="Etl\DSP\Loaders\AmazonDspDataLoader.cs" />
     <Compile Include="Etl\DSP\Loaders\Constants\DspMetricConstants.cs" />
-    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\BaseReportEntriesLoader.cs" />
-    <Compile Include="Etl\DSP\Models\ReportAdvertiser.cs" />
+    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\BaseDspItemLoader.cs" />
+    <Compile Include="Etl\DSP\Models\AmazonDspAccauntDailyReportData.cs" />
+    <Compile Include="Etl\DSP\Models\ReportEntities\ReportAdvertiser.cs" />
     <Compile Include="Etl\DSP\Models\AmazonDspDailyReportData.cs" />
-    <Compile Include="Etl\DSP\Models\ReportCreative.cs" />
-    <Compile Include="Etl\DSP\Models\ReportLineItem.cs" />
-    <Compile Include="Etl\DSP\Models\DspReportMetricItem.cs" />
-    <Compile Include="Etl\DSP\Models\ReportOrder.cs" />
+    <Compile Include="Etl\DSP\Models\ReportEntities\ReportCreative.cs" />
+    <Compile Include="Etl\DSP\Models\ReportEntities\ReportLineItem.cs" />
+    <Compile Include="Etl\DSP\Models\ReportEntities\DspReportMetricItem.cs" />
+    <Compile Include="Etl\DSP\Models\ReportEntities\ReportOrder.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\AppleApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\DbExtracters.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\AdWordsConvSummaryLoader.cs" />
