--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -62,6 +62,10 @@
     <add key="AmazonAuthorizeUrl" value="https://www.amazon.com/ap/oa" />
     <add key="AmazonTokenUrl" value="https://api.amazon.com/auth/o2/token" />
     <add key="AmazonClientUrl" value="https://dagents-staging.azurewebsites.net" />
+    <add key="AmazonWaitTimeSeconds" value="5" />
+    <add key="AmazonWaitAttemptsNumber" value="180" />
+    <add key="AmazonUnauthorizedAttemptsNumber" value="1" />
+    <add key="AmazonFailedRequestAttemptsNumber" value="5" />
     <add key="AmazonAuthCode" value="ANnhMugiYCuDlSyoEKdJ" />
     <!--<add key="AmazonAuthCode" value="ANyvcToCyYtvRsPgWwaR" />--><!-- granted access to ronnie's account -->
     <add key="AmazonRefreshToken" value="" />
