Reworked dsp database structure. Loading of all components.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -170,15 +170,16 @@
     <Compile Include="Entities\Cake\Vertical.cs" />
     <Compile Include="Entities\CPProg\Actions.cs" />
     <Compile Include="Entities\CPProg\DSP\DspAdvertiser.cs" />
-    <Compile Include="Entities\CPProg\DSP\DspBaseItem.cs" />
+    <Compile Include="Entities\CPProg\DSP\DspDbEntity.cs" />
     <Compile Include="Entities\CPProg\DSP\DspCreative.cs" />
     <Compile Include="Entities\CPProg\DSP\DspLineItem.cs" />
     <Compile Include="Entities\CPProg\DSP\DspOrder.cs" />
-    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspAdvertiserSummaryMetric.cs" />
-    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspLineItemSummaryMetric.cs" />
-    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspOrderSummaryMetric.cs" />
-    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspCreativeSummaryMetric.cs" />
-    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspSummaryMetric.cs" />
+    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspAdvertiserDailyMetricValues.cs" />
+    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspLineDailyMetricValues.cs" />
+    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspDailyMetricsValues.cs" />
+    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspOrderMetricValues.cs" />
+    <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspCreativeDailyMetricValues.cs" />
+    <Compile Include="Entities\CPProg\Base\BaseDailyMetricValues.cs" />
     <Compile Include="Entities\CPProg\Summaries\AdSetSummary.cs" />
     <Compile Include="Entities\CPProg\SummaryMetrics\AdSetSummaryMetric.cs" />
     <Compile Include="Entities\CPProg\SummaryMetrics\DailySummaryMetric.cs" />
@@ -623,9 +624,9 @@
     <Compile Include="MigrationsTD\201901220934243_Mig_VendorDataTables_2.Designer.cs">
       <DependentUpon>201901220934243_Mig_VendorDataTables_2.cs</DependentUpon>
     </Compile>
-    <Compile Include="MigrationsTD\201901291053188_Mig_DspDataTables.cs" />
-    <Compile Include="MigrationsTD\201901291053188_Mig_DspDataTables.Designer.cs">
-      <DependentUpon>201901291053188_Mig_DspDataTables.cs</DependentUpon>
+    <Compile Include="MigrationsTD\201901311354011_Mig_DspDataTables2.cs" />
+    <Compile Include="MigrationsTD\201901311354011_Mig_DspDataTables2.Designer.cs">
+      <DependentUpon>201901311354011_Mig_DspDataTables2.cs</DependentUpon>
     </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
@@ -1002,8 +1003,8 @@
     <EmbeddedResource Include="MigrationsTD\201901220934243_Mig_VendorDataTables_2.resx">
       <DependentUpon>201901220934243_Mig_VendorDataTables_2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MigrationsTD\201901291053188_Mig_DspDataTables.resx">
-      <DependentUpon>201901291053188_Mig_DspDataTables.cs</DependentUpon>
+    <EmbeddedResource Include="MigrationsTD\201901311354011_Mig_DspDataTables2.resx">
+      <DependentUpon>201901311354011_Mig_DspDataTables2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
