--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -415,18 +415,21 @@
     <Compile Include="Etl\DSP\Extractors\Composer\DspReportDataComposer.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\DspReportCsvParser.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\Models\CreativeReportRow.cs" />
-    <Compile Include="Etl\DSP\Extractors\Parser\ParsingConverters\CreativeReportentityRowMap.cs" />
+    <Compile Include="Etl\DSP\Extractors\Parser\ParsingConverters\ReportCreativeRowMap.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\ParsingConverters\DecimalReportConverter.cs" />
     <Compile Include="Etl\DSP\Loaders\AmazonDspDataLoader.cs" />
-    <Compile Include="Etl\DSP\Loaders\Constants\DspMetricConstants.cs" />
-    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\AdvertiserDspItemLoader.cs" />
+    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\AdvertisersDataLoader.cs" />
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\BaseDspItemLoader.cs" />
+    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\CreativesDataLoader.cs" />
+    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\DspItemMetricManager.cs" />
+    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\LineItemsDataLoader.cs" />
+    <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\OrdersDataLoader.cs" />
     <Compile Include="Etl\DSP\Models\AmazonDspAccauntDailyReportData.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportAdvertiser.cs" />
     <Compile Include="Etl\DSP\Models\AmazonDspDailyReportData.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportCreative.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportLineItem.cs" />
-    <Compile Include="Etl\DSP\Models\ReportEntities\DspReportMetricItem.cs" />
+    <Compile Include="Etl\DSP\Models\ReportEntities\DspReportEntity.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportOrder.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\AppleApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\DbExtracters.cs" />
