--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -65,6 +65,7 @@
     <add key="AmazonWaitTimeSeconds" value="5" />
     <add key="AmazonWaitAttemptsNumber" value="40" />
     <add key="AmazonUnauthorizedAttemptsNumber" value="3" />
+    <add key="AmazonReportGenerationAttemptsNumber" value="3" />
     <add key="AmazonFailedRequestAttemptsNumber" value="10" />
     <add key="AmazonAuthCode" value="ANnhMugiYCuDlSyoEKdJ" />
     <!--<add key="AmazonAuthCode" value="ANyvcToCyYtvRsPgWwaR" />--><!-- granted access to ronnie's account -->
