--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/PdaSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/PdaSettings.settings
@@ -35,5 +35,8 @@
     <Setting Name="DisabledOnly" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="FromRequest" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
