Now the PDA job is building, runing

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -79,6 +79,9 @@
       <setting name="DisabledOnly" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="FromRequest" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.PdaSettings>
     <CakeExtractor.SeleniumApplication.Properties.VcdSettings>
       <setting name="AccountId" serializeAs="String">
