--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -215,6 +215,11 @@
     <!--<add key="AppleP12Location" value="d:\home\DA\portal\API\AppleCertificate{0}.p12"/>--><!-- azure -->
     <add key="AppleP12Password" value="appleda1" />
 
+    <!-- Amazon DSP Configuration -->
+    <add key="AmazonDspAwsAccessKey" value="AKIAJHIORW7TJGO2FZRQ" />
+    <add key="AmazonDspAwsAccessSecret" value="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" />
+    <add key="AmazonDspAwsAccessReportName" value="DA_AllData_Daily_Last30Days" />
+
     <add key="TD_SiteStats_ImpressionThreshold" value="100" /><!-- min # of impressions (n/a if conversions>0) -->
   </appSettings>
   <system.serviceModel>
