--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -124,7 +124,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
@@ -136,11 +136,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.33.1.0" newVersion="1.33.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.36.1.0" newVersion="1.36.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.33.1.0" newVersion="1.33.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.36.1.0" newVersion="1.36.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -157,6 +157,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.ServiceModel.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.3" newVersion="4.5.0.3" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Ads.Common" publicKeyToken="52807268f2b614dc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.5.1.0" newVersion="9.5.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -243,7 +247,9 @@
     <add key="OAuth2SecretsJsonPath" value="INSERT_OAUTH2_SECRETS_JSON_FILE_PATH_HERE" />
     --></AdWordsApi>
 
-<system.net>
+<startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup><system.net>
     <settings>
       <httpWebRequest maximumErrorResponseLength="-1" />
     </settings>
@@ -294,6 +300,4 @@
       <add name="AdsClientLibs.SummaryRequestLogs" value="Off" />
     </switches>
     <trace autoflush="true" />
-  </system.diagnostics><startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup></configuration>
+  </system.diagnostics></configuration>
