--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -309,11 +309,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.33.1.0" newVersion="1.33.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.36.1.0" newVersion="1.36.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.33.1.0" newVersion="1.33.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.36.1.0" newVersion="1.36.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Linq.Dynamic.Core" publicKeyToken="0f07ec44de6ac832" culture="neutral" />
@@ -322,6 +322,7 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
@@ -334,6 +335,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.ServiceModel.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.3" newVersion="4.5.0.3" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Ads.Common" publicKeyToken="52807268f2b614dc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.5.1.0" newVersion="9.5.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
