--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -672,6 +672,7 @@
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Logging\Loggers\NullLogger.cs" />
     <Compile Include="Logging\TimeWatchers\Amazon\AmazonTimeTracker.cs" />
+    <Compile Include="Logging\TimeWatchers\Amazon\AmazonWatcherConstants.cs" />
     <Compile Include="Logging\TimeWatchers\Amazon\Models\AmazonAccountTrackingData.cs" />
     <Compile Include="Logging\TimeWatchers\Amazon\Models\AmazonLevelTrackingData.cs" />
     <Compile Include="Mef\Composer.cs" />
