--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -469,5 +469,14 @@
     <!-- Optional: uncomment this if you want to reuse an authToken multiple
          times. -->
     <!-- <add key="AuthToken" value="INSERT_YOUR_AUTH_TOKEN_HERE"/> -->
+
+    <!-- Required for manager accounts only: Specify the login customer ID used to authenticate
+         API calls. This will be the customer ID of the authenticated manager account. It should
+         be set without dashes, for example: 1234567890 instead of 123-456-7890. You can also
+         specify this later in code if your application uses  multiple manager account OAuth pairs.
+    -->
+    <!--
+        <add key = 'LoginCustomerId' value = 'INSERT_LOGIN_CUSTOMER_ID_HERE' />/n/n
+    -->
   </AdWordsApi>
 </configuration>
