--- a/3/API/FacebookAPI/FacebookAPI.csproj
+++ b/3/API/FacebookAPI/FacebookAPI.csproj
@@ -46,6 +46,10 @@
   <ItemGroup>
     <Compile Include="Entities\FBAdPreview.cs" />
     <Compile Include="Entities\FBSummary.cs" />
+    <Compile Include="Enums\Attribution.cs" />
+    <Compile Include="Enums\AttributionWindow.cs" />
+    <Compile Include="Enums\ConversionActionType.cs" />
+    <Compile Include="Enums\PlatformFilter.cs" />
     <Compile Include="FacebookUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
