Add a VC page refresh with a time interval to prevent an UNAUTHORIZED error.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
@@ -17,5 +17,8 @@
     <Setting Name="DaysInterval" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">30</Value>
     </Setting>
+    <Setting Name="RefreshPageMinutesInterval" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">55</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
