--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -99,6 +99,9 @@
       <setting name="DaysInterval" serializeAs="String">
         <value>30</value>
       </setting>
+      <setting name="RefreshPageMinutesInterval" serializeAs="String">
+        <value>55</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
       <setting name="SignInPageUrl" serializeAs="String">
