Add an ability to run the VC command for several intervals

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
@@ -14,11 +14,11 @@
     <Setting Name="EndDate" Type="System.DateTime" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="DaysInterval" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">30</Value>
+    <Setting Name="DaysInterval" Type="System.String" Scope="User">
+      <Value Profile="(Default)">5, 60</Value>
     </Setting>
     <Setting Name="RefreshPageMinutesInterval" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">55</Value>
+      <Value Profile="(Default)">50</Value>
     </Setting>
   </Settings>
 </SettingsFile>
