--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -97,10 +97,10 @@
         <value />
       </setting>
       <setting name="DaysInterval" serializeAs="String">
-        <value>30</value>
+        <value>5, 60</value>
       </setting>
       <setting name="RefreshPageMinutesInterval" serializeAs="String">
-        <value>55</value>
+        <value>50</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
