Add an exponential retry-mechanism to VC requests.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -97,7 +97,16 @@
         <value />
       </setting>
       <setting name="DaysInterval" serializeAs="String">
-        <value>5, 60</value>
+        <value>2, 60</value>
+      </setting>
+      <setting name="ReportDownloadingFailedDelayInSeconds" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="ReportDownloadingMinFailedDelayInSeconds" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="ReportDownloadingAttemptCount" serializeAs="String">
+        <value>15</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
