--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
@@ -21,10 +21,13 @@
       <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="ReportDownloadingMinFailedDelayInSeconds" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">10</Value>
+      <Value Profile="(Default)">30</Value>
     </Setting>
     <Setting Name="ReportDownloadingAttemptCount" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">15</Value>
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="ReportDownloadingMaxFailedDelayInSeconds" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
     </Setting>
   </Settings>
 </SettingsFile>
