Refactor VCD classes, rename configuration variables.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -99,14 +99,17 @@
       <setting name="DaysInterval" serializeAs="String">
         <value>2, 60</value>
       </setting>
-      <setting name="ReportDownloadingFailedDelayInSeconds" serializeAs="String">
+      <setting name="ReportDownloadingStartedDelayInSeconds" serializeAs="String">
         <value>10</value>
       </setting>
-      <setting name="ReportDownloadingMinFailedDelayInSeconds" serializeAs="String">
-        <value>10</value>
+      <setting name="MinDelayBetweenReportDownloadingInSeconds" serializeAs="String">
+        <value>30</value>
       </setting>
       <setting name="ReportDownloadingAttemptCount" serializeAs="String">
-        <value>15</value>
+        <value>10</value>
+      </setting>
+      <setting name="MaxDelayBetweenReportDownloadingInSeconds" serializeAs="String">
+        <value>100</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
